@@ -966,10 +966,13 @@ gtk_button_size_allocate (GtkWidget     *widget,
 	  child_allocation.height = MAX (1, child_allocation.height - default_border.top - default_border.bottom);
 	}
 
-      child_allocation.x += focus_width + focus_pad;
-      child_allocation.y += focus_width + focus_pad;
-      child_allocation.width =  MAX (1, child_allocation.width - (focus_width + focus_pad) * 2);
-      child_allocation.height = MAX (1, child_allocation.height - (focus_width + focus_pad) * 2);
+      if (GTK_WIDGET_CAN_FOCUS (button))
+	{
+	  child_allocation.x += focus_width + focus_pad;
+	  child_allocation.y += focus_width + focus_pad;
+	  child_allocation.width =  MAX (1, child_allocation.width - (focus_width + focus_pad) * 2);
+	  child_allocation.height = MAX (1, child_allocation.height - (focus_width + focus_pad) * 2);
+	}
 
       if (button->depressed)
 	{
